ocp-CRs/keycloak/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
  namespace: bamoe-ns
  labels:
    app: keycloak
spec:
  path: /
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
